fix: query by user id
